--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -29,3 +29,7 @@ repos:
     rev: v1.4.4
     hooks:
     -   id: autopep8
+-   repo: git://github.com/alphagov/verify-travis-pre-commit-hook
+    sha: master
+    hooks:
+    -   id: travis-yml-lint
